<resources>
    <string name="app_name">Bravocollect</string>

    //main_activity
    <string name="tv_texto1">¿Ya tienes cuenta?</string>
    <string name="tv_texto2">¿Aún no tienes cuenta?</string>

    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_contraseña">Contraseña</string>

    <string name="btn_Iniciar_Sesion">Iniciar Sesión</string>
    <string name="btn_Crear_Cuenta">Crear Cuenta</string>

    <string name="tv_lineL">―</string>
    <string name="tv_lineR">―</string>

    //crear_cuenta
    <string name="tv_texto3">Ingresa tu Correo Electrónico</string>
    <string name="tv_texto4">Ingresa tu Contraseña</string>

    //inicio_administrador
    <string name="txt_Buscar">Buscar producto</string>
    <string name="tv_texto5">Producto</string>
    <string name="btn_Agregar_Carrito">Agregar a carrito</string>
    <string name="button_administrar">Administrar productos</string>
    <string name="button_administrar_usuarios">Administrar usuarios</string>
    <string name="Recordatorios">Recordatorios</string>


    //pedidos_administrador
    <string name="tv_texto6">Pedidos</string>
    <string name="btn_pedidos_administrador">Revisar pedido</string>

    //settings
    <string name="tv_texto7">Usuario</string>
    <string name="tv_texto8">Siguenos en Instagram</string>
    <string name="tv_texto9">Instagram</string>
    <string name="tv_textoRB1">Easter Egg</string>
    <string name="tv_textoCB1">Tócame</string>
    <string name="tittletickets">Administrar Tickets</string>


    //ABC_Productos
    <string name="txt_codigo">Código del producto</string>
    <string name="txt_descripcion">Descripción del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar producto</string>
    <string name="BotonBuscar">Buscar producto</string>
    <string name="BotonEliminar">Eliminar producto</string>
    <string name="BotonModificar">Modificar producto</string>

    //Usuarios_agenda
    <string name="titulo">Clientes</string>
    <string name="txt_nombre">Nombre del cliente</string>
    <string name="txc_datos">Datos del cliente</string>
    <string name="bototnGuardar">Guardar</string>
    <string name="bototnBusacr">Buscar</string>

    //Bitacora
    <string name="boton_bitacora">Guardar</string>
    <string name="titulo_bitacora">Recordatorios</string>

    //SD
    <string name="txt_nombre_ticket">Nombre del ticket</string>
    <string name="botonConsultar">Consultar</string>



</resources>
