<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABC_Productos">

    <Button
        android:id="@+id/btn_Iniciar_Sesion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="Buscar"
        android:text="@string/BotonBuscar"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_Iniciar_Sesion4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_Iniciar_Sesion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="Registrar"
        android:text="@string/BotonRegistrar"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_Iniciar_Sesion5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_Iniciar_Sesion5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="Modificar"
        android:text="@string/BotonModificar"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_Iniciar_Sesion6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_Iniciar_Sesion6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:onClick="Eliminar"
        android:text="@string/BotonEliminar"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txt_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="366dp"
        android:layout_height="59dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/txt_descripcion"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txt_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="361dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btn_Iniciar_Sesion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:clickable="false"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangulo" />

    <ImageButton
        android:id="@+id/imageButton_carrito"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="carrito"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/carrito"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_home"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:onClick="home"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/home"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_ajustes"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="ajustes"
        android:scaleType="centerInside"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/ajustes"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UseAppTint,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>