<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuarios_agenda">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="368dp"
        android:onClick="Guardar"
        android:text="@string/bototnGuardar"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:onClick="Buscar"
        android:text="@string/bototnBusacr"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <EditText
        android:id="@+id/txt_datos"
        android:layout_width="282dp"
        android:layout_height="87dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txc_datos"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:clickable="false"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangulo" />

    <ImageButton
        android:id="@+id/imageButton_carrito"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="carrito"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/carrito"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_home"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:onClick="home"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/home"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_ajustes"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="ajustes"
        android:scaleType="centerInside"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/ajustes"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UseAppTint,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>