<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SD">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:clickable="false"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangulo" />

    <ImageButton
        android:id="@+id/imageButton_carrito"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="carrito"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/carrito"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_home"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:onClick="home"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/home"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton_ajustes"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="ajustes"
        android:scaleType="centerInside"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/ajustes"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,UseAppTint,UsingOnClickInXml" />

    <EditText
        android:id="@+id/txt_nombre_ticket"
        android:layout_width="354dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/txt_nombre_ticket"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txt_contenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_contenido"
        android:layout_width="357dp"
        android:layout_height="427dp"
        android:layout_marginBottom="52dp"
        android:background="#4A00BCD4"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:onClick="Consultar"
        android:text="@string/botonConsultar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:onClick="Guardar"
        android:text="@string/bototnGuardar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_ticket"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>